# MichiganProviders

./: .replit  code-to-text-20250502T014116182.txt  code-to-text-20250502T134530629.txt  code-to-text-20250512T150102321.txt  create_tables.py  export_network_hospitals_medgroups.py  insert_sample_data.py  main.py  pyproject.toml  requirements.txt
auth/: __init__.py  auth_emails.py  auth_routes.py
auth/static/: login.js
auth/templates/: login.html  logout.html
documentation/app_design/: erd.md  facets_provider_model.md  login_design.md  work_queue_design.md
documentation/chatgpt_docs/: function_calling.md
documentation/clean_providers/: clean_provider_full.py  clean_provider_logic.py  clean_provider_sample.py
documentation/network_info/: duplicates_found.md  formatted_hospitals.md  hospitals.md  hospitals2.md  networks.md  networks_list.md  page_4_7_load.md  (+8 more)
insert_records/: insert_hospitals.py  insert_individual_and_group.py  insert_networks.py  insert_queue_items.py
models/: REL_group_hospital.py  REL_group_network.py  REL_hospital_network.py  REL_provider_group.py  __init__.py  auth.py  db.py  hospital.py  medical_group.py  network.py  provider.py  provider_audit.py  work_queue.py
provider_quality_check/: check_duplicates.py
providers/: individual_provider_update.py  providers_routes.py
upload_provider/: create_individual_provider_from_image.py  facets_json_to_markdown.py  image_to_markdown_gpt.py  markdown_to_individual_provider_gpt.py  provider_to_facets.py  upload_provider_routes.py
work_queues/: merge_duplicates.py  work_queue_routes.py
(+12 files in other folders)
